[NETBEANS-3311] Providing support convert text block to string